force-app/main/default/objects/PatientInformation__c/PatientInformation__c.object-meta.xml
<CustomObject>
    <label>PatientInformation</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>PatientInformation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PatientInformations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>