force-app/main/default/objects/PatientInformation__c/fields/Last_Four_Digits_Of_SSN__c.field-meta.xml
<CustomField>
    <fullName>Last_Four_Digits_Of_SSN__c</fullName>
    <label>Last Four Digits Of SSN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>