force-app/main/default/objects/PatientInformation__c/fields/PatientEmail__c.field-meta.xml
<CustomField>
    <fullName>PatientEmail__c</fullName>
    <label>PatientEmail</label>
    <type>Email</type>
</CustomField>