force-app/main/default/objects/PatientInformation__c/fields/PatientPhone__c.field-meta.xml
<CustomField>
    <fullName>PatientPhone__c</fullName>
    <label>PatientPhone</label>
    <type>Phone</type>
</CustomField>