force-app/main/default/objects/PatientInformation__c/fields/postal_codes__c.field-meta.xml
<CustomField>
    <fullName>postal_codes__c</fullName>
    <label>postal codes</label>
    <length>15</length>
    <type>Text</type>
</CustomField>