force-app/main/default/objects/PatientInformation__c/validationRules/FirstName_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>FirstName_rule</fullName>
    <active>false</active>
    <errorConditionFormula>(ISBLANK(  PatientEmail__c ))</errorConditionFormula>
    <errorMessage>Enter first Name</errorMessage>
</ValidationRule>